--- a/btap2_ch06/Dockerfile
+++ b/btap2_ch06/Dockerfile
@@ -1,34 +1,29 @@
 # ===== Build stage =====
 FROM maven:3.9.9-eclipse-temurin-17 AS build
 WORKDIR /app
-
-# Cache deps
 COPY pom.xml .
 RUN mvn -B -q dependency:go-offline
-
-# Build WAR
 COPY src ./src
 RUN mvn -B -q -DskipTests package
 
 # ===== Run stage (Tomcat 11 / Jakarta) =====
 FROM tomcat:11.0-jre17-temurin
-
 ENV CATALINA_HOME=/usr/local/tomcat
 WORKDIR $CATALINA_HOME
 
-# Tắt cổng shutdown & xóa webapps mẫu
+# Tắt shutdown port, xoá apps mẫu
 RUN sed -ri 's/port="8005"/port="-1"/' $CATALINA_HOME/conf/server.xml \
  && rm -rf $CATALINA_HOME/webapps/*
 
-# Đổi connector 8080 -> ${PORT} để Tomcat đọc từ System property PORT
-# (Tomcat hỗ trợ property substitution trong server.xml)
-RUN sed -ri 's/port="8080"/port="${PORT}"/' $CATALINA_HOME/conf/server.xml
+# Để Tomcat bind theo biến môi trường PORT do Render cấp
+# (Tomcat 10+/11 hỗ trợ ${env.VAR} trong server.xml)
+RUN sed -ri 's/port="8080"/port="${env.PORT}"/' $CATALINA_HOME/conf/server.xml
 
-# Tạo script start (KHÔNG dùng heredoc)
-RUN /bin/sh -c 'echo "#!/bin/sh"                       >  /usr/local/bin/run.sh \
- && /bin/sh -c   "echo \": \${PORT:=8080}\"            >> /usr/local/bin/run.sh" \
- && /bin/sh -c   "echo \"export CATALINA_OPTS=\\\"\\$CATALINA_OPTS -DPORT=\\${PORT}\\\"\" >> /usr/local/bin/run.sh" \
- && /bin/sh -c   "echo \"exec catalina.sh run\"        >> /usr/local/bin/run.sh" \
- && chmod +x /usr/local/bin/run.sh
+# Deploy WAR làm ROOT.war
+COPY --from=build /app/target/*.war $CATALINA_HOME/webapps/ROOT.war
 
-# Deplo
+# Gợi ý RAM
+ENV CATALINA_OPTS="-Xms128m -Xmx384m"
+
+EXPOSE 8080
+CMD ["catalina.sh","run"]
